@@ -1,1 +1,1 @@
-DIST audacious-3.5.tar.bz2 443556 SHA256 4180a1a922b42ef2b1fe47c708a226e03e7400b35e04ece4b2e73c01c5d42514 SHA512 1956bd60b996aff9a137f65fd92cae1abc2c18e9ae2c9b0df959d0e1b15bce9eddb0ef090274fb833fef756537e87eff46d6aa45f110123fd0f2b673ecc6fe59 WHIRLPOOL 1e35acd9a2d1bb27b33c3281c7188f3686fa670860969e867bac177507d9e1a81f69c643a202d491de36301d458c3084aa11bab30086b854def4e7975826e502
+DIST audacious-3.5.1.tar.bz2 446632 SHA256 df380e1ade112c703f57bc3883c71a1025e8d77091a772b86c0f9072efa69507 SHA512 b9ae3e0647b2fe76856a79d014db53ccdbce9524b62522c626032cf4a8d67b3828c280dade79a0327f4f279ece39d6aa600405a018aea0a11707c1903f479fad WHIRLPOOL 9f3a0c4f894aeb7a7274cfbfa181f25c6e4fedfd302c6b79c1a2fac47195ff73250229477278da704240a1259f9592966a0b07afaede41c5f424fd1afad61a0a
